AccountResponse serialize, move CreateShop API to ShopController