@@ -10,7 +10,7 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 @Service
 @RequiredArgsConstructor
@@ -20,16 +20,32 @@ public class ShopServiceImpl implements ShopService {
 
     @Override
     public List<ShopResponse> getShopList() {
-        return shopRepository.findAll().stream().map(shop -> {
-            ShopResponse response = modelMapper.map(shop, ShopResponse.class);
-            return modelMapper.map(shop, ShopResponse.class);
-        }).collect(Collectors.toList());
+        return shopRepository.findAll().stream().map(shop -> modelMapper.map(shop, ShopResponse.class)).toList();
+    }
+
+    @Override
+    public ShopResponse getShopById(UUID id) {
+        return shopRepository.findById(id)
+                .map(shop -> modelMapper.map(shop, ShopResponse.class))
+                .orElseThrow(() -> new NullPointerException("Shop not found id: " + id));
     }
 
     @Override
     public ShopResponse addShop(ShopRequest shopRequest) {
         Shop shop = modelMapper.map(shopRequest, Shop.class);
-        shopRepository.save(shop);
-        return modelMapper.map(shop, ShopResponse.class);
+        return modelMapper.map(shopRepository.save(shop), ShopResponse.class);
+    }
+
+    @Override
+    public String deleteShop(UUID id) {
+        shopRepository.deleteById(id);
+        return "Delete shop " + id + " successfully";
+    }
+
+    @Override
+    public ShopResponse updateShop(ShopRequest shopRequest) {
+        Shop shop = shopRepository.findById(shopRequest.getId())
+                .orElseThrow(() -> new NullPointerException("Shop not found " + shopRequest.getId()));
+        return modelMapper.map(shopRepository.save(modelMapper.map(shopRequest, Shop.class)), ShopResponse.class);
     }
 }
